# metaai-organism-protocol

./: .env.example  .gitignore  AUTHORS.md  CITATION.cff  LICENSE  PRIORITY_STATEMENT.md  README.md  SECURITY.md  pyproject.toml
docs/: decision-ledger.md  digital-organism.md  harness-protocol.md  human-gate.md  meta-field.md
examples/: seller_command_center.harness.yaml
schemas/: constitution.schema.yaml  decision.schema.yaml  event.schema.yaml  harness_manifest.schema.yaml
src/metaai_core/: __init__.py  agents.py  app.py  decision_ledger.py  event_bus.py  mock_llm.py  organism.py  policy.py
tests/: test_app.py  test_demo.py
