[project]
name = "metaai-organism-protocol"
version = "0.1.0"
description = "Open protocol and reference runtime for governing autonomous AI systems as digital organisms."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Georgiy Bibilov" }]
keywords = ["ai-agents", "ai-governance", "digital-organism", "harness-protocol", "human-in-the-loop"]
dependencies = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]

[project.urls]
Homepage = "https://github.com/bibilovgo-bgo/metaai-organism-protocol"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
